TEST_PROGRAMS/VALID/07/array.go
// go lecture (6), slide 8
package main

var x = 5

func main () {
	var x [5] int
	var x[][10] int
	x[i] = 5
	x[i], a = 1,2
	x[a[5]] = 0
	x[5] = 0
}
