TEST_PROGRAMS/INVALID/07/decl_decassign.go
// go lecture (6), slide 8
package main

x, y := 0, 1
func main () {
}
